--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,51 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* general */
+body{
+    background-color: rgb(219, 219, 219);
+}
+
+.container{
+    width: 75%;
+    margin: 25px auto;
+    background-color: white;
+    border-radius: 5px;
+}
+
+/* Header */
 .logo{
     background-color: white;
     height: 100px;
     padding: 10px;
-    width: 300px;
+    width: auto;
 }
 
 h1{
     display: inline-block;
     color: rgb(0, 22, 51);
+}
+
+/* Corpo */
+.actions{
+    background-size: 50px auto;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+button{
+    padding: 5px;
+    border-radius: 5px;
+}
+
+button:first-child{
+    color: white;
+    background-color:rgb(71,173,241);
+    border: none;
+}
+
+button:last-child{
+    color: grey;
+    background-color: white;
+    border: 1px solid grey;
 }
