--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,18 @@ li{
 .logo{
     background-color: white;
     height: 100px;
-    padding: 10px;
+    padding: 25px;
     width: auto;
+}
+
+img{
+    vertical-align: middle;
 }
 
 h1{
     display: inline-block;
     color: rgb(0, 22, 51);
+    vertical-align: middle;
 }
 
 /* Main */
@@ -69,8 +74,9 @@ button:last-child{
 /* Activities */
 .tsktype{
     display: inline-block;
-    border-radius: 7.5px;
-    padding: 5px;
+    border-radius: 10px;
+    padding: 7px;
+    margin-left: 5px;
     color: white;
 }
 
