--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ body{
     margin: 25px auto;
     background-color: white;
     border-radius: 5px;
-    padding: 20px;
 }
 
 h2::before{
@@ -47,11 +46,11 @@ h1{
     vertical-align: middle;
 }
 
-/* Main */
+/* Menu */
 .actions{
     background-size: 50px auto;
-    padding: 15px;
-    border-radius: 5px;
+    padding: 20px 30px;
+    border-bottom: 4px solid rgb(219, 219, 219);
 }
 
 button{
@@ -82,7 +81,9 @@ button:last-child{
 
 
 .tasks{
-    margin-top: 20px;
+    margin-top: 10px;
+    padding: 20px;
+
 }
 
 
